[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlalchemy_asyncio_demo"
version = "0.0.1"
authors = [{ name = "Mike Bayer", email = "mike_mp@zzzcomputing.com" }]
description = "De-monkeypatching Eventlet"
readme = "README.rst"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy>=2.0.29,<2.1",
    "aiosqlite",
]

[tool.black]
line-length = 79

[tool.setuptools.packages.find]
exclude = ["*"]





